update hide scrollbar, fix homepage, modal bug

--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,12 @@
 }
 
 body, html {
-  max-width: 100vw;
-  overflow-x: hidden;
   @apply font-roboto;
+}
+
+html, body{ 
+  min-height: 100vh;
+  overflow: auto;
 }
 
 /* In your TailwindCSS file or global CSS file */
@@ -170,4 +173,14 @@ input:-webkit-autofill {
   @apply bg-white text-gray-900; /* Tailwind classes for background and text color */
   -webkit-box-shadow: 0 0 0 30px white inset !important;
   -webkit-text-fill-color: black !important;
+}
+
+html {
+  overflow: auto;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+  background: transparent; 
 }
